syntax = "proto3";

import "google/protobuf/duration.proto";

import "domains/nutrition/models/ingredient.proto";


package domains.nutrition.models;
option go_package = "github.com/kirvader/BodyController/domains/nutrition/models";

enum MeasureUnit {
	Gramm = 0;
	SingleIngredientUnit = 1;
}

message Quantity {
	MeasureUnit measure_unit = 1;
	float quantity = 2;
}

message WeightedIngredient {
	domains.nutrition.models.Ingredient ingredient = 1;
	Quantity quantity = 2;
};

message Recipe {
	string hex_id = 1;
	string title = 2;
	string taste_description = 3;
	string cooking_steps_description = 4;
	string author = 5;
	repeated WeightedIngredient required_ingredients = 6;
	google.protobuf.Duration cooking_time = 7;
};
